WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280632
REGRESSION(
284457@main
): [WPE][GTK] Missing header in SkiaThreadedPaintingPool.cpp
https://bugs.webkit.org/show_bug.cgi?id=280632
Summary
REGRESSION(284457@main): [WPE][GTK] Missing header in SkiaThreadedPaintingPoo...
Adrian Perez
Reported
2024-09-30 13:29:35 PDT
The GraphicsContextSkia.h header needs to be included in SkiaThreadedPaintingPool.cpp, currently the build stops with: ../Source/WebCore/platform/graphics/skia/SkiaThreadedPaintingPool.cpp:81:13: error: unknown type name 'GraphicsContextSkia' 81 | GraphicsContextSkia context(*canvas, RenderingMode::Unaccelerated, RenderingPurpose::LayerBacking); | ^ 1 error generated.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2024-09-30 14:56:52 PDT
Committed
284465@main
(62510276cfa0): <
https://commits.webkit.org/284465@main
> Reviewed commits have been landed. Closing PR #34460 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2024-09-30 14:57:18 PDT
<
rdar://problem/137000012
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug