REGRESSION(284457@main): [WPE][GTK] Missing header in SkiaThreadedPaintingPool.cpp https://bugs.webkit.org/show_bug.cgi?id=280632

Unreviewed build fix.

* Source/WebCore/platform/graphics/skia/SkiaThreadedPaintingPool.cpp:
  Add missing header.

Canonical link: https://commits.webkit.org/284465@main